@@ -13,6 +13,7 @@ set(lua_test_maps
   "bugs/671_collision_test_not_moving"
   "bugs/686_crash_door_item"
   "bugs/699_crash_exit_surface_moving"
+  "bugs/738_custom_entity_on_ground_below_changed"
   "bugs/779_get_entities_random_order"
   "bugs/769_stuck_dynamic_tile_covered"
   "bugs/781_assert_teletransporter_same_map"
