@@ -21,6 +21,8 @@ Engine changes
 * Fix hero:set_invincible() not working without duration (#805).
 * Fix custom_entity:set_can_traverse_ground() not working for some grounds (#794).
 * Fix custom entity collisions not detected for entities that do not move (#671).
+* Fix custom_entity:get_modified_ground() returning nothing.
+* Fix custom_entity:on_ground_below_changed() not called (#738).
 * Fix creating an entity with the same name as another one just removed (#795).
 
 Lua API changes
